--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-midnight
-title: Homepage title
-description: Here is a description
+title: Avery Rock
+description: Research and programming portfolio
